2010-06-13  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL version from 1.1.6 to 1.1.7

2010-06-13  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Updated copyright comments
	* Cleanup: Set SVN end of line property

2010-06-13  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #14624: Use Flash Message in Template module

2010-06-12  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13895: Bug: getTSConfigVal called with wrong object (Thanks to Andreas Stauder)
	* Fixed bug #14467: Code cleanup: t3lib_iconWorks::getIconImage is not needed anymore (Thanks to Steffen Ritter)
	* Fixed bug #14356: Make disable_controls available for all group fields, not just type "file" (Thanks to Sven Teuber)

2010-06-12  Susanne Moog  <typo3@susanne-moog.de>

	* Follow-up to #8778: Disabled draft workspace: NEWS.txt & forgotten ext_conf_template
	* Follow-up to #14627: SpriteIcons: page-tree, not age-tree
	* Fixed bug #14627: SpriteIcons: Several Icons replaced with non-existent sprite-Icons / not replaced / replaced wrong (Thanks to Steffen Ritter)

2010-06-11  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #14636: Improvements to new Backend skin, replace old styling (Thanks to Steffen Gebert and Lars Zimmermann)
	* Fixed #14679: Deprecating page and branch versioning, these versioning types are now disabled by default, see NEWS.txt for 4.4 for more info
	* Fixed bug #171: added documentatino for calculate and display filepermissions in filelist (Thanks to Jigal van Hemert)
	* Added feature #14546: Make sprite icons / PNGs work in Internet Explorer 6 through PNGfix that works with background images (Thanks to Steffen Ritter)
	* Added feature #14546: Hook in typo3/template.php to add additional header data (Thanks to Steffen Ritter)
	* Fixed bug #14598: Add unique column name in page module (Thanks to Steffen Gebert)
	* Followup to #485: Hookrequest for ~ TemplaVoila unlink doesn't work for Non-Admins - added an additional hook parameter (Thanks to Tolleiv Nietsch)
